--- a/day34 todolist with react/package.json
+++ b/day34 todolist with react/package.json
@@ -7,6 +7,7 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
+    "react-router": "^4.1.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
