--- a/day33 React Basic/package.json
+++ b/day33 React Basic/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "react101",
+  "name": "todolist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
